fix spelling mistake

--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -232,7 +232,7 @@
 <![CDATA[
 --------------------------------------------------------------------------------
 !!!         Run "./build.cmd compile" or "./build.sh compile" first,         !!!
-!!!         as described in MAVED.md                                         !!!
+!!!         as described in h2/MAVEN.md                                      !!!
 --------------------------------------------------------------------------------
 ]]>
                   </message>
