--- a/.lift.toml
+++ b/.lift.toml
@@ -3,6 +3,10 @@
 # config reference here: https://help.sonatype.com/lift/configuration-reference
 #
 
-# Tell sonatype where our pom file lives
+# build the code once to generate the h2/src/main/org/h2/res/help.csv file.
+#
+setup = "./h2/build.sh compile"
+
+# Tell sonatype where our pom file lives, so it can build it again
 #
 build = "maven compile -f h2/pom.xml"
