--- a/.lift.toml
+++ b/.lift.toml
@@ -5,7 +5,7 @@
 
 # build the code once to generate the h2/src/main/org/h2/res/help.csv file.
 #
-setup = "./h2/build.sh compile"
+setup = "cd h2; ./build.sh compile"
 
 # Tell sonatype where our pom file lives, so it can build it again
 #
