--- a/.lift.toml
+++ b/.lift.toml
@@ -5,8 +5,8 @@
 
 # build the code once to generate the h2/src/main/org/h2/res/help.csv file.
 #
-setup = "cd h2; ./build.sh compile; cd .."
+setup = "(cd h2; ./build.sh compile)"
 
 # Tell sonatype where our pom file lives, so it can build it again
 #
-build = "maven -f h2/pom.xml compile "
+build = "maven -f h2/pom.xml compile"
