--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,31 +3,22 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  java-8:
+  build:
+    strategy:
+      matrix:
+        java: [ '8',  '11' ]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Test
-      run: |
-        cd h2
-        echo $JAVA_OPTS
-        export JAVA_OPTS=-Xmx512m
-        ./build.sh jar testCI
-  java-11:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
-    - name: Test
-      run: |
-        cd h2
-        echo $JAVA_OPTS
-        export JAVA_OPTS=-Xmx512m
-        ./build.sh jar testCI
+      - uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'zulu'
+          cache: 'maven'
+      - name: Test
+        run: |
+          cd h2
+          echo $JAVA_OPTS
+          export JAVA_OPTS=-Xmx512m
+          ./build.sh jar testCI
