--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -45,7 +45,8 @@
     <lucene.version>8.5.2</lucene.version>
     <osgi.version>5.0.0</osgi.version>
     <pgjdbc.version>42.2.14</pgjdbc.version>
-    <servlet.version>4.0.1</servlet.version>
+    <javax.servlet.version>4.0.1</javax.servlet.version>
+    <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
     <slf4j.version>1.7.30</slf4j.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -56,7 +57,12 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>${servlet.version}</version>
+      <version>${javax.servlet.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>${jakarta.servlet.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
