Use matrix to avoid duplication

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,28 +6,18 @@ permissions:
   contents: read #  to fetch code (actions/checkout)
 
 jobs:
-  java-8:
+  build:
+    strategy:
+      matrix:
+        java-version: [8, 11]
+    name: Java ${{ matrix.java-version }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK ${{ matrix.java-version }}
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Test
-      run: |
-        cd h2
-        echo $JAVA_OPTS
-        export JAVA_OPTS=-Xmx512m
-        ./build.sh jar testCI
-  java-11:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
+        java-version: ${{ matrix.java-version }}
     - name: Test
       run: |
         cd h2
