--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java-version: [8, 11]
+        java-version: [8, 11, 17]
     name: Java ${{ matrix.java-version }}
     runs-on: ubuntu-latest
     steps:
