Add possibility to enable virtual worker threads in TCP, Web, and PG servers on Java 21+

--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -232,6 +232,10 @@
         <directory>src/java10/precompiled</directory>
         <targetPath>META-INF/versions/10</targetPath>
       </resource>
+      <resource>
+        <directory>src/java21/precompiled</directory>
+        <targetPath>META-INF/versions/21</targetPath>
+      </resource>
     </resources>
     <testResources>
   <testResource>
