--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java-version: [8, 11, 17]
+        java-version: [11, 17]
     name: Java ${{ matrix.java-version }}
     runs-on: ubuntu-latest
     steps:
