--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -37,6 +37,8 @@
   </developers>
 
   <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.release>11</maven.compiler.release>
     <asm.version>9.5</asm.version>
     <jts.version>1.19.0</jts.version>
