--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -44,7 +44,7 @@
     <lucene.version>9.7.0</lucene.version>
     <osgi.version>5.0.0</osgi.version>
     <osgi.jdbc.version>1.1.0</osgi.jdbc.version>
-    <pgjdbc.version>[42.5.5,)</pgjdbc.version>
+    <pgjdbc.version>42.7.2</pgjdbc.version>
     <javax.servlet.version>4.0.1</javax.servlet.version>
     <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
     <slf4j.version>2.0.7</slf4j.version>
