--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -142,6 +142,12 @@
     </dependency>
 
     <!-- Mockito Core (for unit tests) -->
+<!--    <dependency>-->
+<!--      <groupId>net.bytebuddy</groupId>-->
+<!--      <artifactId>byte-buddy</artifactId>-->
+<!--      <version>1.14.8</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
