--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -38,6 +38,8 @@
 
   <properties>
     <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.source>19</maven.compiler.source>
+    <maven.compiler.target>19</maven.compiler.target>
     <asm.version>9.5</asm.version>
     <jts.version>1.19.0</jts.version>
     <junit.version>5.10.0</junit.version>
@@ -65,7 +67,21 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- Mockito Core (for unit tests) -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.7.0</version>
+      <scope>test</scope>
+    </dependency>
 
+    <!-- Mockito JUnit 5 Extension (if using JUnit 5) -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>5.7.0</version>
+      <scope>test</scope>
+    </dependency>
     <!-- START COMPILE DEPENDENCIES !-->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -141,25 +157,7 @@
       <scope>test</scope>
     </dependency>
     <!-- END TEST DEPENDENCIES !-->
-
-    <!-- Mockito Core (for unit tests) -->
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>5.7.0</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Mockito JUnit 5 Extension (if using JUnit 5) -->
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <version>5.7.0</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
-
-
 
   <!-- The test code creates proxy files using javac or tools.jar. Through maven we need to tell it
        where to possibly find tools.jar and annoyingly its called classes.jar on OSX -->
