--- a/h2/pom.xml
+++ b/h2/pom.xml
@@ -37,11 +37,12 @@
   </developers>
 
   <properties>
-    <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
     <asm.version>9.5</asm.version>
     <jts.version>1.19.0</jts.version>
     <junit.version>5.10.0</junit.version>
-    <lucene.version>9.7.0</lucene.version>
+    <lucene.version>8.5.2</lucene.version>
     <osgi.version>5.0.0</osgi.version>
     <osgi.jdbc.version>1.1.0</osgi.jdbc.version>
     <pgjdbc.version>42.7.2</pgjdbc.version>
@@ -84,7 +85,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-analysis-common</artifactId>
+      <artifactId>lucene-analyzers-common</artifactId>
       <version>${lucene.version}</version>
     </dependency>
     <dependency>
